# InterViews

./: CMakeLists.txt  README.md
C-list-template/: Makefile  list.h  main.c  readme_first.txt
C-style/: 1.cpp  2.cpp  Makefile  all_possible_sums.c  all_possible_sums.h  listAPI.h  list_common.h  list_element.c  list_main.c  list_node.c  main.c  ptr.c  reuseAPI  reuseAPI-all  reuseAPI.c  search  search.c  sum  sum_as_template.c  sum_as_template.h  templates.h
future/: Makefile  async  async.cpp  future.cpp  method  method.cpp  user  user.cpp
prc/: test1.cpp  test2.cpp  test3.cpp
src/: four1.cpp  four2.cpp  four3.cpp  four4.cpp  four5.cpp  main.cpp  main1.cpp  main10.cpp  main11.cpp  main12.cpp  main13.cpp  main14.cpp  main15.cpp  main16.cpp  main17.cpp  main18.cpp  main19.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp  main9.cpp
strange-coding/: 2  2.c  Makefile  ptr
tasts/: Тестовое задание Программист СС++ Прософт.doc
